--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -7,6 +7,7 @@
 
 <h5 class="mb-3">{% trans %}Change password{% endtrans %}</h5>
 <form class="needs-validation" method="post" action="index.php?page=change_password" novalidate>
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <div class="row g-2 col-sm-4">
         <div>
             <label for="current_password" class="form-label">{% trans %}Current password{% endtrans %}</label>
