--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -20,6 +20,7 @@
 {% endif %}
 
 <form class="needs-validation" method="post" novalidate>
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="domain" value="{{ zone_id }}">
     <table class="table table-striped table-sm">
         <tr>
