--- a/templates/add_zone_master.html
+++ b/templates/add_zone_master.html
@@ -8,6 +8,7 @@
 
 <h5 class="mb-3">{% trans %}Add master zone{% endtrans %}</h5>
 <form class="needs-validation" method="post" action="index.php?page=add_zone_master" novalidate>
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <table>
         <tr>
             <td style="vertical-align: top" class="pt-1">{% trans %}Zone name{% endtrans %}:</td>
