--- a/templates/add_zone_templ_record.html
+++ b/templates/add_zone_templ_record.html
@@ -11,6 +11,7 @@
 <h5 class="mb-3">{% trans %}Add record to zone template{% endtrans %} "{{ templ_name }}"</h5>
 
 <form class="needs-validation" method="post" novalidate>
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="domain" value="{{ zone_templ_id }}">
     <table class="table table-striped table-hover table-sm">
         <tr>
