--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -8,6 +8,7 @@
 
 <h5 class="mb-3">{% trans %}Delete user{% endtrans %} "{{ name }}"</h5>
 <form method="post" action="">
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <table class="table table-striped table-sm">
 
         {% if zones_count > 0 %}
