--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -20,6 +20,7 @@
 {% endif %}
 
 <form method="post" action="index.php?page=edit_comment&id={{ zone_id }}">
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <div>
         <label for="floatingTextarea"></label>
         <textarea class="form-control form-control-sm" rows="10" name="comment"
