--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -20,6 +20,7 @@
 {% endif %}
 
 <form class="needs-validation" method="post" action="index.php?page=edit_record&id={{ record_id }}" novalidate>
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <table class="table table-striped table-hover table-sm">
         <thead>
         <tr>
