--- a/templates/edit_zone_templ_record.html
+++ b/templates/edit_zone_templ_record.html
@@ -12,6 +12,7 @@
 <h5 class="mb-3">{% trans %}Edit record in zone template{% endtrans %} "{{ templ_details['name'] }}"</h5>
 <form class="needs-validation" method="post"
       action="index.php?page=edit_zone_templ_record&zone_templ_id={{ zone_templ_id }}&id={{ record_id }}" novalidate>
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="rid" value="{{ record_id }}">
     <input type="hidden" name="zid" value="{{ zone_templ_id }}">
 
