--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -15,6 +15,7 @@
 {% endif %}
 
 <form method="post" action="index.php?page=delete_domains">
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
     <table class="table table-striped table-hover table-sm">
         {% if count_zones_view > iface_rowamount and count_zones_all_letterstart == "0" or count_zones_view == 0 %}
         <tr><td>{% trans %}There are no zones to show in this listing.{% endtrans %}</td></tr>
