--- a/install/templates/step3.html.twig
+++ b/install/templates/step3.html.twig
@@ -15,6 +15,7 @@
     <hr>
 
     <form class="needs-validation" method="post" novalidate>
+        <input type="hidden" name="install_token" value="{{ install_token }}">
         <table class="table table-sm">
             <tbody>
             <tr>
