--- a/install/templates/step6.html.twig
+++ b/install/templates/step6.html.twig
@@ -44,6 +44,7 @@ $dns_ns4 = '{{ dns_ns4 }}';
 </pre>
 
     <form method="post">
+        <input type="hidden" name="install_token" value="{{ install_token }}">
         <input type="hidden" name="step" value="{{ next_step }}">
         <input type="hidden" name="language" value="{{ language }}">
         <input type="submit" name="submit" class="btn btn-primary btn-sm"
