fix: add CSRF protection and input validation to controllers

--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -29,6 +29,8 @@
 {% endif %}
 
 <p>{% trans %}Are you sure?{% endtrans %}</p>
-<input type="button" class="btn btn-primary btn-sm" onClick="location.href='index.php?page=delete_domain&id={{ zone_id }}&confirm=1'"
-       value="{% trans %}Yes{% endtrans %}" data-testid="confirm-delete-zone">
+<form method="post" action="index.php?page=delete_domain&id={{ zone_id }}" style="display: inline;">
+    <input type="hidden" name="_token" value="{{ csrf_token }}">
+    <input type="submit" class="btn btn-primary btn-sm" value="{% trans %}Yes{% endtrans %}" data-testid="confirm-delete-zone">
+</form>
 <input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=list_zones'" value="{% trans %}No{% endtrans %}" data-testid="cancel-delete-zone">
